...
                            
                        }.background(Color.red)
                        
                    }
                        // Group
                }
                .navigationTitle("Ntosetta")
                
                
                .toolbar {
                    
                    ToolbarItem(placement: .navigationBarLeading){
                        Button("\(Image(systemName: "sidebar.left"))"){
...
